--- a/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
+++ b/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
@@ -108,40 +108,12 @@
             <li><b>Cartuccce</b></li>
             <ul>
               <li><a href="https://uk.rs-online.com/web/p/binding-posts/6684590"><b>RS PRO 30A, Silver Binding Post With Brass Contacts and Nickel Plated - 5mm Hole Diameter</b></a>
-                    <br>
-                    <br>
-                <b>Technical data:</b>
-                <br>
-                Contact material of brass
-                <br>
-                Contact plating of nickel
-                <br>
-                Current rating of 30 A
-                <br>
-                Accepts spade connector of 5 mm diameter
-                <br>
-              </li>
-              <br>
+              <li><b>Suoni ausiliari</b></li>
+              <li><a href="https://uk.rs-online.com/web/p/piezo-buzzers/1674876"><b>Murata Diaphragm External Piezo Buzzer, 27 (Dia.) x 0.54mm</b></a></li>
+              <li><b>Clockwatch</b></li>
+              <li><b>Clockwatch</b></li>
             </ul>
-            <li><b>Suoni ausiliari</b></li>
-            <ul>
-              <li><a href="https://uk.rs-online.com/web/p/piezo-buzzers/1674876"><b>Murata Diaphragm External Piezo Buzzer, 27 (Dia.) x 0.54mm</b></a>
-                    <br>
-                    <br>
-                <b>Technical data:</b>
-                <br>
-                Maximum Frequency	4.6kHz
-                <br>
-                Diameter	27mm
-                <br>
-                Tone Type	Diaphragm
-                <br>
-              </li>
-              <br>
-            </ul>
-            <li><b>Sistema di amplificazione</b></li>
-          </ul>
-          </p>
+            </p>
         </div>
       </div>
     </div>
