--- a/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
+++ b/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
@@ -107,11 +107,11 @@
           <ul>
             <li><b>Cartuccce</b></li>
             <ul>
-              <li><a href="https://uk.rs-online.com/web/p/binding-posts/6684590"><b>RS PRO 30A, Silver Binding Post With Brass Contacts and Nickel Plated - 5mm Hole Diameter</b></a>
+              <li><a href="https://uk.rs-online.com/web/p/binding-posts/6684590" target="_blank"><b>RS PRO 30A, Silver Binding Post With Brass Contacts and Nickel Plated - 5mm Hole Diameter</b></a>
             </ul>
             <li><b>Suoni ausiliari</b></li>
             <ul>
-              <li><a href="https://uk.rs-online.com/web/p/piezo-buzzers/1674876"><b>Murata Diaphragm External Piezo Buzzer, 27 (Dia.) x 0.54mm</b></a></li>
+              <li><a href="https://uk.rs-online.com/web/p/piezo-buzzers/1674876" target="_blank"><b>Murata Diaphragm External Piezo Buzzer, 27 (Dia.) x 0.54mm</b></a></li>
             </ul>
             <li><b>Clockwatch</b></li>
             <li><b>Clockwatch</b></li>
