--- a/pages/learn/cartridge_music_john_cage/01_00_introduzione.html
+++ b/pages/learn/cartridge_music_john_cage/01_00_introduzione.html
@@ -104,9 +104,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            The word 'Cartridge' in the title refers to the cartridge of phonographic pick-ups, into the aperture of which is fitted a needle. In Cartridge Music, the performer is instructed to insert all manner of unspecified small objects into the
-            cartridge; prior performances have involved such items as pipe cleaners, matches, feathers, wires, etc. Furniture may be used as well, amplified via contact microphones. All sounds are to be amplified and are controlled by the
-            performer(s).
+            Cartridge Music è una composizione del 1960 ed è tra i primi tentativi di John Cage nel produrre musica elettronica live.
           </p>
         </div>
       </div>
