--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -114,7 +114,7 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_01_scelta_delle_cartucce.html" target="_blank"><b>03.01. Scelta delle Cartucce</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_02_scelta_dei_suoni_ausiliari.html" target="_blank"><b>03.02. Scelta dei Suoni Ausiliari</b></a></li>
             </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/04_00_interpretazione_e_realizzazione_della_partitura.html" target="_blank"><b>04. Realizzazione della Partitura</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/04_00_interpretazione_e_realizzazione_della_partitura.html" target="_blank"><b>04. Interpretazione e Realizzazione della Partitura</b></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/05_00_testimonianze_di_altre_esecuzioni.html" target="_blank"><b>05. Testimonianze di Altre Esecuzioni</b></a></li>
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/05_01_cartridge_music_by_federico_scalas.html" target="_blank"><b>05.01. Cartridge Music by Federico Scalas</b></a></li>
