--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -127,6 +127,28 @@
     </div>
   </section>
 
+  <!-- PreviOUs Performances-->
+
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+            <strong>PREVIOUS PERFORMANCES</strong>
+          </h4>
+          <p class="mbr-text mbr-fonts-style display-7">
+          <ul>
+            <li><b>(1968-70) - Mario Bertoncini: </b><a href="http://www.mariobertoncini.com/all/slides/1968-69_cartridge_music.html" target="_blank"><b>photo</b></a></li>, <a href="https://www.discogs.com/it/release/556053-Mario-Bertoncini-Earle-Brown-John-Cage-Cifre-Four-Systems-Cartridge-Music" target="_blank"><b>vinyl</b></a></li>
+            <li><b>(2016/11/19) - John Cage Musicircus, Town Hall, Seattle: </b><a href="https://www.youtube.com/watch?v=qoRPaWhovEc" target="_blank"><b>preparation video</b></a></li>
+            <li><b>(1968/9) - Mario Bertoncini: </b><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf" target="_blank"><b>Cartridge Music, italian version by F.Scalas</b></a></li>
+            <li><b>(1968/9) - Mario Bertoncini: </b><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/adobe_illustrator_cartridge_music_score_maker.ai" target="_blank"><b>Adobe Illustrator Cartridge Music Score Maker</b></a></li>
+            <li><b>(1968/9) - Mario Bertoncini: </b><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/CartridgeMusic-gen2020.pdf" target="_blank"><b>Cartridge Music - score by E.D'Alò, R.Terlizzi</b></a></li>
+          </ul>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Downloads-->
 
