--- a/pages/learn.html
+++ b/pages/learn.html
@@ -307,7 +307,7 @@
                                     <br><strong>Storia della Musica 1</strong>
                                   </h5>
                                 </div>
-                                <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
+                                <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_i.html" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
                                     &gt;</a></div>
                               </div>
                             </div>
