--- a/pages/learn/storia_della_musica_i.html
+++ b/pages/learn/storia_della_musica_i.html
@@ -23,7 +23,7 @@
   <meta name="description" content="">
 
 
-  <title>Storia della Musica I</title>
+  <title>Storia della Musica 1</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -95,7 +95,7 @@
         <div class="card col-12 col-lg-10">
           <div class="card-wrapper">
             <div class="card-box align-center">
-              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>STORIA DELLA MUSICA I</strong></h4>
+              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>STORIA DELLA MUSICA 1</strong></h4>
             </div>
           </div>
         </div>
