--- a/pages/learn/storia_della_musica_i.html
+++ b/pages/learn/storia_della_musica_i.html
@@ -164,7 +164,7 @@
                 </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html" class="text-primary"><b>12. Dagli Intermedi al Teatro Pubblico</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html" class="text-primary"><b>12.01. Metá anni '30 boom dell'Opera a Roma</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html" class="text-primary"><b>12.01. Metà anni '30 boom dell'Opera a Roma</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html" class="text-primary"><b>12.02. Trasformazione radicale del Teatro</b></a></li>
                 </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html" class="text-primary"><b>13. Claudio Monteverdi </b></a></li>
