--- a/pages/learn/storia_della_musica_1.html
+++ b/pages/learn/storia_della_musica_1.html
@@ -121,7 +121,7 @@
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html" class="text-primary"><b>01. Etnomusicologia</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_00_musica_greca.html" class="text-primary"><b>02. Musica Greca</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_01_importanza_della_musica_per_i_greci.html" class="text-primary"><b>02.01. Importanza della musica per i Greci</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_01_importanza_della_musica_per_i_greci.html" class="text-primary"><b>02.01. Importanza della Musica per i Greci</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html" class="text-primary"><b>02.02. Periodo Arcaico</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_03_periodo_classico.html" class="text-primary"><b>02.03. Periodo Classico</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_04_ethos.html" class="text-primary"><b>02.04. Ethos</b></a></li>
@@ -132,8 +132,8 @@
                 <ul>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_01_la_notazione.html" class="text-primary"><b>03.01. La Notazione</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_02_ut_queant_laxis.html" class="text-primary"><b>03.02. Ut Queant Laxis</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_03_amplificazione_orizzontale.html" class="text-primary"><b>03.03. Amplificazione orizzontale: Tropi e Sequenze</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_04_amplificazione_vertical.html" class="text-primary"><b>03.04. Amplificazione verticale: Polifonia</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_03_amplificazione_orizzontale.html" class="text-primary"><b>03.03. Amplificazione Orizzontale: Tropi e Sequenze</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_04_amplificazione_vertical.html" class="text-primary"><b>03.04. Amplificazione Verticale: Polifonia</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_05_ars_antiqua_scuola_di_notre_dame.html" class="text-primary"><b>03.05. Ars Antiqua: Scuola di Notre Dame</b></a></li>
                 </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/04_00_monodia_medievale_non_liturgica.html" class="text-primary"><b>04. Monodia Medievale non Liturgica</b></a></li>
@@ -148,7 +148,7 @@
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_02_seconda_quinta_generazione.html" class="text-primary"><b>07.02. Seconda-Quinta Generazione</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_03_sesta_generazione.html" class="text-primary"><b>07.03. Sesta Generazione</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/08_00_la_musica_nelle_corti_umanistiche_italiane.html" class="text-primary"><b>08. La Musica nelle Coti Umanistiche Italiane</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/08_00_la_musica_nelle_corti_umanistiche_italiane.html" class="text-primary"><b>08. La Musica nelle Corti Umanistiche Italiane</b></a></li>
                 <ul>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/08_01_isabella_d_este_e_lucrezia_borgia.html" class="text-primary"><b>08.01. Isabella d'Este e Lucrezia Borgia</b></a></li>
                 </ul>
@@ -166,8 +166,8 @@
                 </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_00_dagli_intermezzi_al_teatro_pubblico.html" class="text-primary"><b>12. Dagli Intermedi al Teatro Pubblico</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_01_meta_anni_30_boom_dell_opera_a_roma.html" class="text-primary"><b>12.01. Metà anni '30: boom dell'Opera a Roma</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_02_trasformazione_radicale_del_teatro.html" class="text-primary"><b>12.02. Trasformazione radicale del Teatro</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_01_meta_anni_30_boom_dell_opera_a_roma.html" class="text-primary"><b>12.01. Metà Anni '30: Boom dell'Opera a Roma</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_02_trasformazione_radicale_del_teatro.html" class="text-primary"><b>12.02. Trasformazione Radicale del Teatro</b></a></li>
                 </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/13_00_claudio_monteverdi.html" class="text-primary"><b>13. Claudio Monteverdi </b></a></li>
               </ul>
