--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -70,7 +70,7 @@
 
 
   <!-- Navbar-->
-  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html" target="_blank"></div>
 
 
   <!-- Header-->
@@ -104,39 +104,39 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html"><b>01. Come Affrontare lo Studio dell'Acustica degli Ambienti</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html" target="_blank"><b>01. Come Affrontare lo Studio dell'Acustica degli Ambienti</b></a></li>
             <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html"><b>01.02. Tre Metodi di Studio</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html" target="_blank"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html" target="_blank"><b>01.02. Tre Metodi di Studio</b></a></li>
             </ul>
             <li><b>02. Approccio Modale</b></li>
             <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_01_modi_naturali_in_una_dimesione_spaziale.html"><b>02.01. Modi Naturali in Una Dimensione Spaziale</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_02_risposta_in_frequenza.html"><b>02.02. Risposta in Frequenza</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_03_modi_naturali_in_tre_dimensioni_spaziali.html"><b>02.03. Modi Naturali in Tre Dimensioni Spaziali</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html"><b>02.04. Analisi delle Frequenze Associate</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_05_curva_di_risonanza_di_un_modo_naturale.html"><b>02.05. Curva di Risonanza di un Modo Naturale</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html"><b>02.06. Frequenza di Schroeder</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_01_modi_naturali_in_una_dimesione_spaziale.html" target="_blank"><b>02.01. Modi Naturali in Una Dimensione Spaziale</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_02_risposta_in_frequenza.html" target="_blank"><b>02.02. Risposta in Frequenza</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_03_modi_naturali_in_tre_dimensioni_spaziali.html" target="_blank"><b>02.03. Modi Naturali in Tre Dimensioni Spaziali</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html" target="_blank"><b>02.04. Analisi delle Frequenze Associate</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_05_curva_di_risonanza_di_un_modo_naturale.html" target="_blank"><b>02.05. Curva di Risonanza di un Modo Naturale</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html" target="_blank"><b>02.06. Frequenza di Schroeder</b></a></li>
             </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html"><b>03. Approccio Geometrico</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html" target="_blank"><b>03. Approccio Geometrico</b></a></li>
             <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html"><b>03.01. Ray Tracing</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>03.02. Sorgenti Virtuali</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html" target="_blank"><b>03.01. Ray Tracing</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html" target="_blank"><b>03.02. Sorgenti Virtuali</b></a></li>
             </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html"><b>04. Approccio Statistico</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html" target="_blank"><b>04. Approccio Statistico</b></a></li>
             <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>04.01. Formula di Sabine</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html"><b>04.02. Formula di Norris-Eyring</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html"><b>04.03. Attenuazione Dovuta alla Propagazione</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html"><b>04.04. Filtraggio dell'Aria</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html"><b>04.05. Formula di Sabine con Filtraggio dell'Aria</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html"><b>04.07. Norma ISO 3382 e alcuni Descrittori Statistici</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>04.08. Descrittori Statistici Relativi all'Energia</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html"><b>04.09. Meccanismi Percettivi dello Spazio e della Sorgente</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_10_meccanismi_percetttivi_della_distanza.html"><b>04.10. Meccanismi Percettivi della Distanza</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html" target="_blank"><b>04.01. Formula di Sabine</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html" target="_blank"><b>04.02. Formula di Norris-Eyring</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html" target="_blank"><b>04.03. Attenuazione Dovuta alla Propagazione</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html" target="_blank"><b>04.04. Filtraggio dell'Aria</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html" target="_blank"><b>04.05. Formula di Sabine con Filtraggio dell'Aria</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html" target="_blank"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html" target="_blank"><b>04.07. Norma ISO 3382 e alcuni Descrittori Statistici</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html" target="_blank"><b>04.08. Descrittori Statistici Relativi all'Energia</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html" target="_blank"><b>04.09. Meccanismi Percettivi dello Spazio e della Sorgente</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_10_meccanismi_percetttivi_della_distanza.html" target="_blank"><b>04.10. Meccanismi Percettivi della Distanza</b></a></li>
             </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/05_00_misurazione_acustica_di_un_ambiente.html"><b>05. Misurazione Acustica di un Ambiente</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/05_00_misurazione_acustica_di_un_ambiente.html" target="_blank"><b>05. Misurazione Acustica di un Ambiente</b></a></li>
               </p>
         </div>
       </div>
