--- a/pages/learn/storia_della_musica_1.html
+++ b/pages/learn/storia_della_musica_1.html
@@ -118,58 +118,58 @@
           <p class="mbr-text mbr-fonts-style display-7">
             <strong>
               <ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html" class="text-primary"><b>01. Etnomusicologia</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_00_musica_greca.html" class="text-primary"><b>02. Musica Greca</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html" target="_blank"><b>01. Etnomusicologia</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_00_musica_greca.html" target="_blank"><b>02. Musica Greca</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_01_importanza_della_musica_per_i_greci.html" class="text-primary"><b>02.01. Importanza della Musica per i Greci</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html" class="text-primary"><b>02.02. Periodo Arcaico</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_03_periodo_classico.html" class="text-primary"><b>02.03. Periodo Classico</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_04_ethos.html" class="text-primary"><b>02.04. Ethos</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_05_i_trattati.html" class="text-primary"><b>02.05 I Trattati</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_06_origini_della_tragedia.html" class="text-primary"><b>02.06. Origini della Tragedia</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_01_importanza_della_musica_per_i_greci.html" target="_blank"><b>02.01. Importanza della Musica per i Greci</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_02_periodo_arcaico.html" target="_blank"><b>02.02. Periodo Arcaico</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_03_periodo_classico.html" target="_blank"><b>02.03. Periodo Classico</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_04_ethos.html" target="_blank"><b>02.04. Ethos</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_05_i_trattati.html" target="_blank"><b>02.05 I Trattati</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_06_origini_della_tragedia.html" target="_blank"><b>02.06. Origini della Tragedia</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_00_antico_canto_cristiano.html" class="text-primary"><b>03. Antico Canto Cristiano</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_00_antico_canto_cristiano.html" target="_blank"><b>03. Antico Canto Cristiano</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_01_la_notazione.html" class="text-primary"><b>03.01. La Notazione</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_02_ut_queant_laxis.html" class="text-primary"><b>03.02. Ut Queant Laxis</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_03_amplificazione_orizzontale.html" class="text-primary"><b>03.03. Amplificazione Orizzontale: Tropi e Sequenze</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_04_amplificazione_verticale.html" class="text-primary"><b>03.04. Amplificazione Verticale: Polifonia</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_05_ars_antiqua_scuola_di_notre_dame.html" class="text-primary"><b>03.05. Ars Antiqua: Scuola di Notre Dame</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_01_la_notazione.html" target="_blank"><b>03.01. La Notazione</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_02_ut_queant_laxis.html" target="_blank"><b>03.02. Ut Queant Laxis</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_03_amplificazione_orizzontale.html" target="_blank"><b>03.03. Amplificazione Orizzontale: Tropi e Sequenze</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_04_amplificazione_verticale.html" target="_blank"><b>03.04. Amplificazione Verticale: Polifonia</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/03_05_ars_antiqua_scuola_di_notre_dame.html" target="_blank"><b>03.05. Ars Antiqua: Scuola di Notre Dame</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/04_00_monodia_medievale_non_liturgica.html" class="text-primary"><b>04. Monodia Medievale non Liturgica</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/04_00_monodia_medievale_non_liturgica.html" target="_blank"><b>04. Monodia Medievale non Liturgica</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/04_01_trovatori_e_trovieri.html" class="text-primary"><b>04.01. Trovatori e Trovieri</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/04_01_trovatori_e_trovieri.html" target="_blank"><b>04.01. Trovatori e Trovieri</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/05_ars_nova_francese.html" class="text-primary"><b>05. Ars Nova Francese</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/06_ars_nova_italiana.html" class="text-primary"><b>06. Ars Nova Italiana</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_00_i_compositori_fiamminghi.html" class="text-primary"><b>07. I Compositori Fiamminghi</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/05_ars_nova_francese.html" target="_blank"><b>05. Ars Nova Francese</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/06_ars_nova_italiana.html" target="_blank"><b>06. Ars Nova Italiana</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_00_i_compositori_fiamminghi.html" target="_blank"><b>07. I Compositori Fiamminghi</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_01_prima_generazione.html" class="text-primary"><b>07.01. Prima Generazione</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_02_seconda_quinta_generazione.html" class="text-primary"><b>07.02. Seconda-Quinta Generazione</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_03_sesta_generazione.html" class="text-primary"><b>07.03. Sesta Generazione</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_01_prima_generazione.html" target="_blank"><b>07.01. Prima Generazione</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_02_seconda_quinta_generazione.html" target="_blank"><b>07.02. Seconda-Quinta Generazione</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/07_03_sesta_generazione.html" target="_blank"><b>07.03. Sesta Generazione</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/08_00_la_musica_nelle_corti_umanistiche_italiane.html" class="text-primary"><b>08. La Musica nelle Corti Umanistiche Italiane</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/08_00_la_musica_nelle_corti_umanistiche_italiane.html" target="_blank"><b>08. La Musica nelle Corti Umanistiche Italiane</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/08_01_isabella_d_este_e_lucrezia_borgia.html" class="text-primary"><b>08.01. Isabella d'Este e Lucrezia Borgia</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/08_01_isabella_d_este_e_lucrezia_borgia.html" target="_blank"><b>08.01. Isabella d'Este e Lucrezia Borgia</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/09_00_la_chanson_parigina_tra_francia_e_italia.html" class="text-primary"><b>09. La Chanson Parigina tra Francia e Italia</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/10_00_la_riforma_di_lutero.html" class="text-primary"><b>10. La Riforma di Lutero</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_00_madrigale_del_cinquecento.html" class="text-primary"><b>11. Madrigale del Cinquecento</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/09_00_la_chanson_parigina_tra_francia_e_italia.html" target="_blank"><b>09. La Chanson Parigina tra Francia e Italia</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/10_00_la_riforma_di_lutero.html" target="_blank"><b>10. La Riforma di Lutero</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_00_madrigale_del_cinquecento.html" target="_blank"><b>11. Madrigale del Cinquecento</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_01_la_frottola.html" class="text-primary"><b>11.01. La Frottola</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_evoluzione_del_madrigale.html" class="text-primary"><b>11.02. Evoluzione del Madrigale</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_01_la_frottola.html" target="_blank"><b>11.01. La Frottola</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_evoluzione_del_madrigale.html" target="_blank"><b>11.02. Evoluzione del Madrigale</b></a></li>
                   <ul>
-                    <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_01_firenze.html" class="text-primary"><b>11.02.01. Firenze</b></a></li>
-                    <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_02_roma.html" class="text-primary"><b>11.02.02. Roma</b></a></li>
-                    <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_03_venezia.html" class="text-primary"><b>11.02.03. Venezia</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_01_firenze.html" target="_blank"><b>11.02.01. Firenze</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_02_roma.html" target="_blank"><b>11.02.02. Roma</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/11_02_03_venezia.html" target="_blank"><b>11.02.03. Venezia</b></a></li>
                   </ul>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_00_dagli_intermezzi_al_teatro_pubblico.html" class="text-primary"><b>12. Dagli Intermedi al Teatro Pubblico</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_00_dagli_intermezzi_al_teatro_pubblico.html" target="_blank"><b>12. Dagli Intermedi al Teatro Pubblico</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_01_meta_anni_30_boom_dell_opera_a_roma.html" class="text-primary"><b>12.01. Metà Anni '30: Boom dell'Opera a Roma</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_02_trasformazione_radicale_del_teatro.html" class="text-primary"><b>12.02. Trasformazione Radicale del Teatro</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_01_meta_anni_30_boom_dell_opera_a_roma.html" target="_blank"><b>12.01. Metà Anni '30: Boom dell'Opera a Roma</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/12_02_trasformazione_radicale_del_teatro.html" target="_blank"><b>12.02. Trasformazione Radicale del Teatro</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/13_00_claudio_monteverdi.html" class="text-primary"><b>13. Claudio Monteverdi </b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/13_00_claudio_monteverdi.html" target="_blank"><b>13. Claudio Monteverdi </b></a></li>
               </ul>
             </strong>
             <br><br>
