--- a/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html
+++ b/pages/learn/storia_della_musica_1/01_00_etnomusicologia.html
@@ -107,6 +107,66 @@
             <li>Musica intesa come fenomeno prevalentemente estetico è prerogativa solo europea, altrove esso costituisce una pratica funzionale a varie occasioni di socialità.</li>
           </ul>
           </p>
+          <h3 class="mbr-text mbr-fonts-style display-7">Teoria della Nascita della Musica</h3>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Finchè l’uomo non divenne sedentario, la musica era quasi prettamente vocale, una deformazione del linguaggio. Il nomadismo impedisce la danza per definizione, oltre al trasporto degli strumenti.
+          <ul>
+            <li>Imitazione della natura</li>
+            <li>Ricerca dell’Aldilà</li>
+            <li>Per scandire il proprio lavoro</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Secondo Curt Sachs le melodie primitive possono essere classificate in:
+          <ul>
+            <li>Logogeniche: nate dalla parola e prive di carica emotiva (per comunicare a distanza). Patogeniche: originate dalle emozioni, come gioia e rabbia.</li>
+            <li>Melogeniche: originate dalla melodia e che si collocano in mezzo fra le logogeniche e le patogeniche (canto degli uccelli).</li>
+          </ul>
+          <h3 class="mbr-text mbr-fonts-style display-7">I Primi Strumenti </h3>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Secondo Sachs i primi strumenti furono quelli idiofoni:
+          <ul>
+            <li>Terra</li>
+            <li>Cassa armonica</li>
+            <li>Braccialetti</li>
+            <li>Strumenti di vita quoidiana</li>
+          </ul>
+          La danza ha dato vita alla nascita degli strumenti.
+          <br>
+          <br>
+          La prima forma di musica nasce dalla lallazione infantile.
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Table-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">FOLKLORICA</th>
+                <th scope="col">COLTA</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Orale</td>
+                <td>Scritta</td>
+              </tr>
+              <tr>
+                <td>Pratica</td>
+                <td>estetica</td>
+              </tr>
+              <tr>
+                <td>langue (perchè non se ne conosce l'autore)</td>
+                <td>parole</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -119,8 +179,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center">
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_1/02_00_musica_greca.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
